[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/EndGameOverlay.gd" type="Script" id=1]
[ext_resource path="res://Prefabs/ButtonWithSound/ButtonWithSound.tscn" type="PackedScene" id=2]
[ext_resource path="res://Font/LemonMilk.otf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=6]
size = 34
outline_size = 4
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 34
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 34
outline_size = 4
outline_color = Color( 0.0588235, 0.67451, 0.0235294, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="EndGameOverlay" type="Control"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.10529
margin_top = -1.05263
margin_right = 2.10535
margin_bottom = -1.05261
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.3
anchor_top = 0.4
anchor_right = 0.7
anchor_bottom = 0.6
color = Color( 0.227451, 0.227451, 0.227451, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 103.0
rect_pivot_offset = Vector2( 0.5, 0 )
custom_constants/margin_top = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
margin_top = 30.0
margin_right = 409.0
margin_bottom = 222.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_left = 163.0
margin_right = 245.0
margin_bottom = 35.0
size_flags_horizontal = 4

[node name="GreenScore" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 28.0
margin_bottom = 35.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1

[node name="Colon" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 32.0
margin_right = 50.0
margin_bottom = 35.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 4 )
text = ": "
align = 1

[node name="RedScore" type="Label" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 54.0
margin_right = 82.0
margin_bottom = 35.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 7 )
text = "0"
align = 1

[node name="Label" type="Label" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 409.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 5 )
text = "Player 1 wins!"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/MarginContainer/VBoxContainer"]
margin_left = 95.0
margin_top = 81.0
margin_right = 314.0
margin_bottom = 101.0
size_flags_horizontal = 4
custom_constants/separation = 20

[node name="PlayAgainButton" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_right = 77.0
focus_neighbour_right = NodePath("../GoToMenuButton")
text = "Play Again"

[node name="GoToMenuButton" parent="ColorRect/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource( 2 )]
margin_left = 97.0
margin_right = 219.0
focus_neighbour_left = NodePath("../PlayAgainButton")
text = "Go to Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 2 )
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
[connection signal="pressed" from="ColorRect/MarginContainer/VBoxContainer/HBoxContainer/GoToMenuButton" to="." method="_on_GoToMenuButton_pressed"]
